[tool.poetry]
name = "redis_api"
version = "0.1.0"
description = ""
authors = ["Lucas <lcatolino@itba.edu.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "^2.0.1"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
